tests/ifcc-test-output/testfiles-3_01_12_var_name_invalid/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:19: error: stray ‘\302’ in program
    2 |     int helloWorld¼;
      |                   ^
input.c:2:20: error: stray ‘\274’ in program
    2 |     int helloWorld¼;
      |                    ^

return code: 1
